--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ streamlit
 python-dotenv
 langchain
 pinecone
+pinecone-client>=2.3.0
 langchain-huggingface 
 sentence_transformers
 langchain-pinecone
 langchain-community
 langchain-google-genai==1.0.5
 pypdf
+
 
 
 
